--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <!-- dashboard page -->
-<main class="mainpage p-1 p-lg-3"
-      id="content">
+<div class="mainpage p-1 p-lg-3"
+     id="content">
     <!-- tasks list -->
     <div class="card bg-light mb-1 mb-lg-3"
          *ngIf="tasks">
@@ -905,7 +905,7 @@
             </div>
         </div>
     </div>
-</main>
+</div>
 
 <power-forms-dashboard-newform #newform
                                [tags]="tags"
