--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -1,8 +1,8 @@
 <!-- details page -->
-<main class="mainpage p-1 p-lg-3"
-      id="content"
-      tabindex="-1"
-      *ngIf="form">
+<div class="mainpage p-1 p-lg-3"
+     id="content"
+     tabindex="-1"
+     *ngIf="form">
     <!-- title -->
     <div class="h4">
         <svg width="1em"
@@ -773,7 +773,7 @@
             </div>
         </div>
     </div>
-</main>
+</div>
 
 <!-- new task modal -->
 <power-forms-details-maketask #maketask
