--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -1,6 +1,6 @@
-<main class="row w-100 m-0 p-1 p-lg-2"
-      id="content"
-      tabindex="-1">
+<div class="row w-100 m-0 p-1 p-lg-2"
+     id="content"
+     tabindex="-1">
     <!-- left side -->
     <div class="col-12 col-lg-3 col-xl-2 p-0 pr-lg-2 mb-2">
         <!-- toolbox -->
@@ -637,7 +637,7 @@
             </smooth-dnd-draggable>
         </smooth-dnd-container>
     </div>
-</main>
+</div>
 
 <!-- configure formular modal -->
 <power-forms-editor-formular-settings [(model)]="storage.model"
