--- a/power/src/app/fragebogen/fillout/fillout.component.html
+++ b/power/src/app/fragebogen/fillout/fillout.component.html
@@ -1,8 +1,8 @@
 <!-- fillout page -->
-<main class="container p-1 p-lg-3"
-      id="content"
-      tabindex="-1"
-      *ngIf="form">
+<div class="container p-1 p-lg-3"
+     id="content"
+     tabindex="-1"
+     *ngIf="form">
 
     <!-- language -->
     <div class="form-group row w-50"
@@ -40,4 +40,4 @@
                                   (changes)="changed($event)"
                                   #wrapper>
     </power-forms-surveyjs-wrapper>
-</main>
+</div>
