--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -1,6 +1,6 @@
 <!-- landing page -->
-<main class="mainpage"
-      id="content">
+<div class="mainpage"
+     id="content">
     <h1 class="sr-only"
         i18n>Online Formulare</h1>
     <div class="row m-0 mt-3">
@@ -216,4 +216,4 @@
             </div>
         </section>
     </div>
-</main>
+</div>
