--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -1,6 +1,6 @@
 <!-- dashboard page -->
-<main class="mainpage p-1 p-lg-3"
-      id="content">
+<div class="mainpage p-1 p-lg-3"
+     id="content">
     <section class="card bg-light"
              *ngIf="data">
         <div class="card-header h5">
@@ -187,4 +187,4 @@
             </div>
         </div>
     </section>
-</main>
+</div>
