--- a/power/src/app/static/accessibility/accessibility.component.html
+++ b/power/src/app/static/accessibility/accessibility.component.html
@@ -1,4 +1,4 @@
-<main class="container">
+<div class="container">
     <h1 i18n>Erklärung zur Barrierefreiheit</h1>
     <p i18n>Informationen über die Zugänglichkeit dieser Webseiten gemäß § 9b NBGG sowie über diesbezügliche
         Kontaktmöglichkeiten.</p>
@@ -127,4 +127,4 @@
             </tbody>
         </table>
     </address>
-</main>
+</div>
