--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -62,7 +62,7 @@
                               d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383l-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z" />
                     </svg>
                     <span class="ml-2"
-                          i18n>Kontakt</span>
+                          i18n>Feedback über E-Mail geben</span>
                 </a>
             </div>
 
@@ -78,8 +78,6 @@
                         class="btn btn-secondary btn-sm"
                         i18n-title
                         title="Email-Adresse kopieren"
-                        i18n-aria-label
-                        aria-label="Email-Adresse kopieren"
                         (click)="copyEmailToClipboard()">
                     <svg width="1em"
                          height="1em"
@@ -96,7 +94,7 @@
                               d="M9.5 1h-3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
                     </svg>
                     <span class="sr-only"
-                          i18n>Email-Adresse kopieren</span>
+                          i18n>Feedback Email-Adresse in Zwischenablage kopieren</span>
                 </button>
             </div>
         </div>
@@ -142,8 +140,6 @@
                             style="vertical-align: 0;"
                             i18n-title
                             title="Suchen"
-                            i18n-aria-label
-                            aria-label="Suchen"
                             (click)="doSearch()">
                         <svg width="1em"
                              height="1em"
@@ -160,7 +156,7 @@
                                   d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
                         </svg>
                         <span class="sr-only"
-                              i18n>Suchen</span>
+                              i18n>Suche ausführen</span>
                     </button>
                 </div>
 
