--- a/power/src/app/static/imprint/imprint.component.html
+++ b/power/src/app/static/imprint/imprint.component.html
@@ -1,4 +1,4 @@
-<main class="container">
+<div class="container">
     <h1 i18n>Impressum</h1>
     <h2 i18n>Anbieter gem. §5 Telemediengesetz und §55 Abs. 1 des Staatsvertrages über Rundfunk und Telemedien
         (Rundfunkstaatsvertrag - RStV)</h2>
@@ -132,4 +132,4 @@
         verwiesen wurde. Sofern Teile oder einzelne Formulierungen dieses Textes der geltenden Rechtslage nicht, nicht
         mehr oder nicht vollständig entsprechen sollten, bleiben die übrigen Teile des Dokumentes in ihrem Inhalt und
         ihrer Gültigkeit davon unberührt.</p>
-</main>
+</div>
