--- a/power/src/app/static/login/login.component.html
+++ b/power/src/app/static/login/login.component.html
@@ -1,1 +1,1 @@
-<p i18n>Sie werden in kürze zur Loginseite weitergeleitet...</p>
+<h1 i18n>Sie werden in kürze zur Loginseite weitergeleitet...</h1>
