--- a/power/src/app/static/privacy/privacy.component.html
+++ b/power/src/app/static/privacy/privacy.component.html
@@ -1,4 +1,4 @@
-<main class="container">
+<div class="container">
     <h1 i18n>Datenschutz im LGLN</h1>
     <p i18n>Das Grundgesetz gewährleistet jeder Bürgerin und jedem Bürger das Recht, über Verwendung und Preisgabe
         seiner persönlichen Daten zu bestimmen. Geschützt werden also nicht Daten, sondern die Freiheit der Menschen,
@@ -98,4 +98,4 @@
             </tbody>
         </table>
     </address>
-</main>
+</div>
