--- a/power/src/app/static/terms-of-service/terms-of-service.component.html
+++ b/power/src/app/static/terms-of-service/terms-of-service.component.html
@@ -1,4 +1,4 @@
-<main class="container">
+<div class="container">
     <h1 i18n>Nutzungsbedingungen</h1>
 
     <h2 i18n>(1) Allgemeines</h2>
@@ -52,4 +52,4 @@
            target="_blank"
            rel="noopener noreferrer nofollow">https://immobilienmarkt.niedersachsen.de</a>
     </p>
-</main>
+</div>
